--- a/app/src/main/res/layout/activity_change__pw.xml
+++ b/app/src/main/res/layout/activity_change__pw.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d6dbe1"
-    tools:context="songhyeonlee.teamplayboard.Find_IdPw"
-    >
-
+    tools:context="songhyeonlee.teamplayboard.Change_PW">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,11 +22,10 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center_vertical"
-            android:text="ID 찾기"
+            android:text="새로운 비밀번호 설정"
             android:paddingLeft="10dp"
             android:textSize="25dp"
-            android:textStyle="bold"
-            tools:text="find ID" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -42,20 +39,21 @@
         android:orientation="vertical"
         android:id="@+id/linearLayout2">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="이름"
-        android:textSize="20dp"
-        android:layout_marginLeft="30dp"
-        android:textStyle="bold"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="새로운 비밀번호"
+            android:textSize="20dp"
+            android:layout_marginLeft="30dp"
+            android:textStyle="bold"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:background="#f4f4f4"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:inputType="textPassword"/>
     </LinearLayout>
 
     <LinearLayout
@@ -71,7 +69,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="학번"
+            android:text="비밀번호 확인"
             android:textSize="20dp"
             android:layout_marginLeft="30dp"
             android:textStyle="bold"/>
@@ -81,7 +79,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:background="#f4f4f4"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:inputType="textPassword"/>
     </LinearLayout>
 
     <LinearLayout
@@ -96,7 +95,7 @@
         <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:text="아이디 찾기"
+            android:text="확인"
             android:textSize="18dp"
             android:layout_marginLeft="30dp"
             android:backgroundTint="#3fa9f5"
@@ -104,19 +103,6 @@
             android:textStyle="bold"/>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout4"
-        android:layout_marginLeft="37dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="30dp"
-        android:onClick="test_pw"
-        android:text="비밀번호 찾기" />
 
 
 </RelativeLayout>
