--- a/app/src/main/res/layout/activity_find__pw.xml
+++ b/app/src/main/res/layout/activity_find__pw.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d6dbe1"
-    tools:context="songhyeonlee.teamplayboard.Find_IdPw"
-    >
-
+    tools:context="songhyeonlee.teamplayboard.Find_PW">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,11 +22,10 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center_vertical"
-            android:text="ID 찾기"
+            android:text="비밀번호 찾기"
             android:paddingLeft="10dp"
             android:textSize="25dp"
-            android:textStyle="bold"
-            tools:text="find ID" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -42,13 +39,13 @@
         android:orientation="vertical"
         android:id="@+id/linearLayout2">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="이름"
-        android:textSize="20dp"
-        android:layout_marginLeft="30dp"
-        android:textStyle="bold"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="아이디"
+            android:textSize="20dp"
+            android:layout_marginLeft="30dp"
+            android:textStyle="bold"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -71,6 +68,32 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:text="이름"
+            android:textSize="20dp"
+            android:layout_marginLeft="30dp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="#f4f4f4"
+            android:layout_height="50dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="vertical"
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/linearLayout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout11">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
             android:text="학번"
             android:textSize="20dp"
             android:layout_marginLeft="30dp"
@@ -87,16 +110,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="49dp"
-        android:layout_below="@+id/linearLayout3"
+        android:id="@+id/linearLayout4"
+        android:layout_below="@+id/linearLayout11"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout4">
+        android:layout_marginTop="34dp">
 
         <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:text="아이디 찾기"
+            android:text="비밀번호 찾기"
             android:textSize="18dp"
             android:layout_marginLeft="30dp"
             android:backgroundTint="#3fa9f5"
@@ -104,19 +127,4 @@
             android:textStyle="bold"/>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout4"
-        android:layout_marginLeft="37dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="30dp"
-        android:onClick="test_pw"
-        android:text="비밀번호 찾기" />
-
-
 </RelativeLayout>
