--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d6dbe1"
     tools:context="songhyeonlee.teamplayboard.Join">
 
     <LinearLayout
@@ -151,7 +152,7 @@
             android:layout_marginRight="30dp"
             android:layout_height="40dp"
             android:background="#f4f4f4"
-            />
+            android:inputType="textPassword"/>
 
     </LinearLayout>
 
@@ -179,7 +180,7 @@
             android:layout_marginRight="30dp"
             android:layout_height="40dp"
             android:background="#f4f4f4"
-            />
+            android:inputType="textPassword"/>
 
     </LinearLayout>
     
