--- a/app/src/main/res/layout/activity_kanban3.xml
+++ b/app/src/main/res/layout/activity_kanban3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d6dbe1"
-    tools:context="songhyeonlee.teamplayboard.Kanban2">
+    tools:context="songhyeonlee.teamplayboard.Kanban3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +48,6 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:backgroundTint="#3fa9f5"
             android:onClick="toKanban2"
             android:text="진행 중"
             android:textColor="#ffffff"
@@ -63,6 +62,7 @@
             android:onClick="toKanban3"
             android:text="완료함"
             android:textColor="#ffffff"
+            android:backgroundTint="#3fa9f5"
             android:textSize="17dp"
             android:textStyle="bold" />
 
@@ -116,7 +116,7 @@
 
                 <Button
                     style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="235dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:onClick="show_details"
@@ -124,14 +124,6 @@
                     android:textStyle="italic"
                     android:visibility="visible" />
 
-                <Button
-                    android:id="@+id/ToKanban2"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="완료하기 >"
-                    android:visibility="visible" />
 
             </LinearLayout>
 
@@ -146,8 +138,9 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:gravity="right"
-                android:weightSum="1">
+                android:gravity="left"
+                android:weightSum="1"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView3"
@@ -159,12 +152,12 @@
                     android:textSize="12dp" />
 
                 <Button
-                    android:id="@+id/ToKanban1"
+                    android:id="@+id/ToKanban2"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right|bottom"
-                    android:text="← 시작 전으로"
+                    android:text="← 진행 중으로"
 
                     android:textSize="10dp"
                     android:visibility="visible" />
@@ -206,6 +199,4 @@
 
     </LinearLayout>
 
-
 </RelativeLayout>
-
