--- a/app/src/main/res/layout/activity_change__pw.xml
+++ b/app/src/main/res/layout/activity_change__pw.xml
@@ -93,6 +93,7 @@
         android:id="@+id/linearLayout4">
 
         <Button
+            android:id="@+id/changepwButton"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:text="확인"
