--- a/app/src/main/res/layout/activity_create__kanban1.xml
+++ b/app/src/main/res/layout/activity_create__kanban1.xml
@@ -23,11 +23,10 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center_vertical"
-            android:text="프로젝트 이름"
+            android:text="할일 추가하기"
             android:paddingLeft="10dp"
             android:textSize="25dp"
-            android:textStyle="bold"
-            tools:text="create new project" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -137,15 +136,17 @@
         android:id="@+id/linearLayout8">
 
         <Button
+            android:id="@+id/cancelButton"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:text="취소하기"
-            android:background="#f4f4f4"
-
             android:layout_marginRight="5dp"
-            android:gravity="center"/>
+
+            android:background="#f4f4f4"
+            android:gravity="center"
+            android:text="취소하기" />
 
         <Button
+            android:id="@+id/addList"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="추가하기"
