--- a/app/src/main/res/layout/activity_create__project.xml
+++ b/app/src/main/res/layout/activity_create__project.xml
@@ -27,8 +27,7 @@
         android:text="새 프로젝트 만들기"
         android:paddingLeft="10dp"
         android:textSize="25dp"
-        android:textStyle="bold"
-        tools:text="create new project" />
+        android:textStyle="bold" />
 
 </LinearLayout>
 
@@ -119,6 +118,7 @@
         android:gravity="top|right">
 
         <Button
+            android:id="@+id/cancelButton"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="취소하기"
@@ -128,6 +128,7 @@
             android:gravity="center"/>
 
         <Button
+            android:id="@+id/addProject"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="만들기"
