--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -86,6 +86,7 @@
             android:background="#e9e9e9"/>
 
         <Button
+            android:id="@+id/pushButton"
             android:layout_width="90dp"
             android:layout_height="50dp"
             android:text="재촉하기"
