--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,7 @@
         android:text="+ 새 프로젝트 만들기"
         android:textColor="#ff8700"
         android:textSize="20dp"
-        android:textStyle="bold"
-        tools:text="+ Project" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView2"
@@ -35,8 +34,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="5dp"
-        android:text="버튼을 눌러 할 일을 추가해주세요!"
-        tools:text="add projcet please" />
+        android:text="버튼을 눌러 할 일을 추가해주세요!" />
     
 </LinearLayout>
     
