--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -29,10 +29,10 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btnEdit"
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:background="#929292"
-            android:onClick="edit_details"
             android:text="수정하기"
             android:textColor="#ffffff"
             android:textStyle="bold" />
@@ -125,20 +125,32 @@
         android:paddingLeft="25dp"
         android:gravity="center_vertical"
         android:text="코멘트"
-        android:textColor="#000000"
         android:layout_below="@+id/linearLayout10"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/textView6" />
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView6">
+        android:layout_below="@+id/textView6"
+        android:layout_above="@+id/linearLayout14">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_below="@+id/textView6">
+
+            <!-- A RecyclerView with some commonly used attributes -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/my_recycler_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
-
+        </ScrollView>
     </LinearLayout>
 
     <LinearLayout
@@ -148,24 +160,26 @@
         android:gravity="left"
         android:layout_above="@+id/linearLayout9"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout14">
 
         <EditText
+            android:id="@+id/messageInput"
             android:layout_width="300dp"
-            android:layout_height= "match_parent"
-
+            android:layout_height="match_parent"
             android:background="#e9e9e9"
-            android:textSize="15dp"
-            android:hint="   댓글을 입력하세요."/>
+            android:hint="   댓글을 입력하세요."
+            android:textSize="15dp" />
 
         <Button
+            android:id="@+id/sendButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="댓글 등록"
-            android:textSize="12dp"
-            android:textStyle="bold"
             android:background="#929292"
-            android:textColor="#ffffff"/>
+            android:text="댓글 등록"
+            android:textColor="#ffffff"
+            android:textSize="12dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
