--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:background="#d6dbe1"
     tools:context="songhyeonlee.teamplayboard.Login">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -42,17 +43,17 @@
         android:id="@+id/linearLayout2">
 
         <EditText
-            android:id="@+id/IdText"
+            android:id="@+id/etEmail"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:background="#f4f4f4"
-            android:hint="ID"
+            android:hint="Email"
             android:padding="10dp" />
 
         <EditText
-            android:id="@+id/PasswordText"
+            android:id="@+id/etPassword"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -63,7 +64,7 @@
             android:padding="10dp" />
 
         <Button
-            android:id="@+id/LoginButton"
+            android:id="@+id/bntLogin"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -86,7 +87,7 @@
         android:layout_centerHorizontal="true">
 
         <Button
-            android:id="@+id/Joinbutton"
+            android:id="@+id/bntRegister"
             android:layout_width="125dp"
             android:layout_height="match_parent"
             android:layout_gravity="left"
@@ -94,7 +95,7 @@
             android:background="#ff8700"
             android:gravity="center"
             android:onClick="toJoin"
-            android:text="회원가입"
+            android:text="register"
             android:textColor="#ffffff"
             android:textStyle="bold" />
 
@@ -114,6 +115,13 @@
 
 
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/pbLogin"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
