--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -69,7 +69,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="이메일(학번)"
+            android:text="이메일"
             android:textSize="20dp"
             android:layout_marginLeft="30dp"
             android:textStyle="bold"/>
@@ -81,6 +81,9 @@
             android:layout_marginRight="30dp"
             android:layout_height="40dp"
             android:background="#f4f4f4"
+            android:hint="이메일형식으로 입력해주세요"
+            android:paddingLeft="10dp"
+            android:inputType="textEmailAddress"
             />
 
     </LinearLayout>
@@ -156,6 +159,8 @@
             android:layout_marginRight="30dp"
             android:layout_height="40dp"
             android:background="#f4f4f4"
+            android:hint="6자리이상"
+            android:paddingLeft="10dp"
             android:inputType="textPassword"/>
 
     </LinearLayout>
@@ -185,7 +190,9 @@
             android:layout_marginRight="30dp"
             android:layout_height="40dp"
             android:background="#f4f4f4"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:hint="6자리이상"
+            android:paddingLeft="10dp"/>
 
     </LinearLayout>
     
