--- a/app/src/main/res/layout/activity_create__project.xml
+++ b/app/src/main/res/layout/activity_create__project.xml
@@ -46,6 +46,7 @@
         android:layout_height="50dp"
         android:hint="새 프로젝트 제목"
         android:paddingLeft="10dp"
+        android:textSize="20dp"
         android:background="#e9e9e9"/>
 
 </LinearLayout>
@@ -68,18 +69,25 @@
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:gravity="center"
+            android:textSize="18dp"
             android:background="#e9e9e9"/>
 
         <TextView
+            android:id="@+id/duedate_projcet"
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:text="YY-MM-DD"
             android:gravity="center"
+            android:textSize="20dp"
             android:background="#e9e9e9"/>
 
-        <Button
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <ImageButton
+            android:id="@+id/datepicker"
+            android:src="@drawable/datepicker"
+            android:gravity="fill"
+            android:background="#e9e9e9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             />
     </LinearLayout>
 
@@ -93,9 +101,9 @@
         android:layout_alignParentStart="true">
 
         <EditText
-            android:id="@+id/addProject_id"
+            android:id="@+id/addProject_member"
             android:layout_width="230dp"
-            android:layout_height="35dp"
+            android:layout_height="50dp"
             android:hint="팀원 아이디를 입력하세요."
             android:paddingLeft="10dp"
             android:layout_marginRight="10dp"
@@ -103,10 +111,12 @@
 
         <Button
             android:layout_width="100dp"
-            android:layout_height="35dp"
+            android:layout_height="50dp"
             android:text="팀원추가"
+            android:textSize="15dp"
+            android:textStyle="bold"
             android:textColor="#ffffff"
-            android:background="#3fa9f5"
+            android:background="#3fa988"
             />
     </LinearLayout>
 
@@ -125,6 +135,7 @@
             android:layout_height="40dp"
             android:text="취소하기"
             android:background="#f4f4f4"
+            android:textStyle="bold"
 
             android:layout_marginRight="5dp"
             android:gravity="center"/>
@@ -134,6 +145,7 @@
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="만들기"
+            android:textStyle="bold"
             android:layout_marginRight="25dp"
 
             android:textColor="#ffffff"
