--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -25,8 +25,7 @@
             android:text="회원가입"
             android:paddingLeft="10dp"
             android:textSize="25dp"
-            android:textStyle="bold"
-            tools:text="Join" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -38,33 +37,6 @@
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="이름"
-            android:textSize="20dp"
-            android:layout_marginLeft="30dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/join_name"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_height="40dp"
-            android:background="#f4f4f4"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout3">
 
         <TextView
             android:layout_width="match_parent"
@@ -81,7 +53,37 @@
             android:layout_marginRight="30dp"
             android:layout_height="40dp"
             android:background="#f4f4f4"
-            android:hint="이메일형식으로 입력해주세요"
+            android:paddingLeft="10dp"
+            android:hint="반드시 이메일 형식으로 입력해주세요"
+            android:textColorHint="#ff3333"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout3">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="이름"
+            android:textSize="20dp"
+            android:layout_marginLeft="30dp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:id="@+id/join_name"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_height="40dp"
+            android:background="#f4f4f4"
+            android:hint="ex.홍길동"
             android:paddingLeft="10dp"
             android:inputType="textEmailAddress"
             />
@@ -101,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginLeft="30dp"
-            android:text="아이디"
+            android:text="학번"
             android:textSize="20dp"
             android:textStyle="bold" />
 
@@ -118,21 +120,13 @@
 
         <EditText
             android:id="@+id/join_id"
-            android:layout_width="220dp"
+            android:layout_width="match_parent"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="15dp"
             android:layout_height="40dp"
-            android:background="#f4f4f4"
-            />
-
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:text="중복확인"
-            android:textStyle="bold"
-            android:background="#ff0000"
-            android:textColor="#ffffff"/>
-
+            android:paddingLeft="10dp"
+            android:hint="ex.2017000000"
+            android:background="#f4f4f4" />
     </LinearLayout>
 
     <LinearLayout
