--- a/app/src/main/res/layout/activity_kanban1.xml
+++ b/app/src/main/res/layout/activity_kanban1.xml
@@ -84,6 +84,7 @@
                 android:gravity="center">
 
                 <Button
+                    android:id="@+id/addKanban"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="15dp"
@@ -92,87 +93,73 @@
                     android:onClick="test2"
                     android:text="+ 할 일 추가하기"
                     android:textColor="#ff8700"
-                    android:textSize="15dp"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="left|center_vertical"
+                android:layout_height="30dp"
+                android:orientation="vertical"
+                android:id="@+id/linearLayout2"
                 android:layout_below="@+id/addTask"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
+
+                <TextView
+                    android:id="@+id/defualt_addkanban"
+                    android:layout_width="350dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="버튼을 눌러 할 일을 추가해주세요!" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:gravity="left|center_vertical"
+                android:layout_below="@+id/linearLayout2"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:id="@+id/delete">
+                android:layout_marginBottom="10dp"
+                android:id="@+id/linearLayout16">
 
                 <Button
                     android:layout_width="60dp"
                     android:layout_height="35dp"
-                    android:id="@+id/delete_button"
+                    android:id="@+id/btnDeleteKanban"
                     android:layout_marginLeft="10dp"
                     android:text="DELETE"
-                    android:textSize="10dp"/>
+                    android:background="#F6F6F6"
+                    android:textSize="14dp"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:id="@+id/Task_list1"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="#ffffffff"
-                android:layout_below="@+id/delete"
-                android:layout_centerHorizontal="true">
+                android:layout_height="match_parent"
+                android:layout_above="@+id/linearLayout9"
+                android:layout_below="@+id/linearLayout16">
 
-                <CheckBox
-                    android:id="@+id/checkBox1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:onClick="show_details"
-                    android:text="task1"
-                    android:textStyle="italic"
-                    android:visibility="visible" />
-
-                <Button
-                    android:id="@+id/ToKanban2"
-                    style="@style/Widget.AppCompat.Button.Borderless"
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="진행하기 >"
-                    android:visibility="visible" />
+                    android:layout_height="254dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_below="@+id/textView6">
 
-            </LinearLayout>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/kanban1_listview"
+                        android:scrollbars="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@+id/Task_list1"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="#ffffff"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:weightSum="1">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="30일 남았습니다."
-                    android:textSize="12dp"
-                    android:paddingLeft="40dp"
-                    />
+                </ScrollView>
 
             </LinearLayout>
 
