--- a/app/src/main/res/layout/kanban_view.xml
+++ b/app/src/main/res/layout/kanban_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,20 +20,25 @@
             android:layout_height="30dp" />
 
         <Button
-            android:id="@+id/mProjectName"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:id="@+id/mKanbanName"
+            android:layout_width="235dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:onClick="show_details"
+            android:text="task1"
+            android:textSize="17dp"
+            android:textStyle="italic"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/mKanbanNext"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:onClick="toKanban1"
-            android:text="project1"
-            android:paddingEnd="30dp"
-            android:paddingRight="5dp"
-            android:textSize="18dp"
+            android:gravity="right"
+            android:text="완료하기 >"
             android:visibility="visible" />
-
-
-
 
     </LinearLayout>
 
@@ -49,20 +53,32 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:gravity="right"
         android:weightSum="1">
 
         <TextView
-            android:id="@+id/mProjectdueMessage"
-            android:layout_width="match_parent"
+            android:id="@+id/mKanbandueMessage"
+            android:layout_width="275dp"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="DUTE DATE"
-            android:textStyle="bold"
-            android:textSize="15dp"
-            android:paddingLeft="10dp"
+            android:gravity="center_vertical"
+            android:text="마감기한 : yy-mm-dd"
+            android:paddingLeft="40dp"
+            android:textSize="12dp"
             android:textColor="#ff8669"
-            />
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/mKanbanBack"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right|bottom"
+            android:text="← 시작 전으로"
+
+            android:textSize="10dp"
+            android:visibility="visible" />
 
     </LinearLayout>
+
 
 </LinearLayout>
